[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cxas-claw"
version = "0.3.0"
description = "CX Agent Studio CLI Agent & Workspace — interactive shell, REPL, chat, and full cxas command coverage"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
  {name = "Yash Kavaiya", email = "yashkavaiya@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
  "cxas-scrapi",
  "google-cloud-dialogflow-cx>=1.40.0",
  "google-auth",
  "google-auth-httplib2",
  "rich>=13.0",
  "click>=8.1",
  "pydantic>=2.0",
  "httpx>=0.25",
  "python-dotenv",
  "pandas",
  "tabulate",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
mcp = [
  "google-cloud-dialogflow-cx-mcp",
  "google-adk",
]
dev = [
  "pytest",
  "pytest-asyncio",
  "black",
  "ruff",
]

[project.scripts]
cxclaw = "cxas_claw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cxas_claw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
